# qwitch

./: .gitignore  LICENCE  README.md  pyproject.toml  qwitch.py  setup.cfg
.github/: CODEOWNERS
.github/workflows/: qwitch-publish.yml
qwitch/: api.py  config.py  qwitch.py
