[metadata]
name = qwitch
version = 1.1.0
author = Jean-Francois Vaduret
author_email = jean.francois.vaduret@gmail.com
description = Stream twitch in Quicktime.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gencys/qwitch
project_urls =
  Tracker = https://github.com/gencys/qwitch/issues
  Source = https://github.com/gencys/qwitch
license = MIT
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: MIT License
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: MacOS
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Internet :: WWW/HTTP
  Topic :: Multimedia :: Sound/Audio
  Topic :: Multimedia :: Video
  Topic :: Utilities

[options]
python_requires = >=3.7, <4
packages = qwitch
install_requires =
  requests >=2.26.0,<3.0
  streamlink

[options.entry_points]
console_scripts =
  qwitch = qwitch.qwitch:main